--- a/templates/lots.hbs
+++ b/templates/lots.hbs
@@ -1,8 +1,8 @@
 <h1>Junk</h1>
 
 <ul>
-  {{#each lot in model}}
-  <li>{{#link-to 'lot' lot}}{{lot.name}}{{/link-to}}</li>
+  {{#each lot in model itemController='lot'}}
+  <li>{{#link-to 'lot' lot}}{{lot.name}}{{/link-to}} <button class="btn btn-xs btn-danger" {{action 'delete'}}>Kill</button> </li>
   {{/each}}
 </ul>
 
