--- a/templates/lots.hbs
+++ b/templates/lots.hbs
@@ -1,9 +1,9 @@
 <h1>Junk</h1>
 
-<ul>
+{{#link-to 'new-lot'}}New lot{{/link-to}}
+
+<ul class="list-unstyled">
   {{#each lot in model itemController='lot'}}
-  <li>{{#link-to 'lot' lot}}{{lot.name}}{{/link-to}} <button class="btn btn-xs btn-danger" {{action 'delete'}}>Kill</button> </li>
+  <li class="well col-sm-3 lots">{{#link-to 'lot' lot}}{{lot.name}}{{/link-to}} <button class="btn btn-xs btn-danger" {{action 'delete'}}>Kill</button> </li>
   {{/each}}
 </ul>
-
-{{#link-to 'new-lot'}}New lot{{/link-to}}
