Add ability to render add product form and product template on lot page

--- a/templates/lots.hbs
+++ b/templates/lots.hbs
@@ -4,6 +4,7 @@
 
 <ul class="list-unstyled">
   {{#each lot in model itemController='lot'}}
-  <li class="well col-sm-3 lots">{{#link-to 'lot' lot}}{{lot.name}}{{/link-to}} <button class="btn btn-xs btn-danger" {{action 'delete'}}>Kill</button> </li>
+  <li class="well col-sm-3 lots">
+    {{#link-to 'lot' lot}}{{lot.name}}{{/link-to}} <button class="btn btn-xs btn-default" {{action 'delete'}}>Remove</button> </li>
   {{/each}}
 </ul>
