--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+body {
+  font-family: 'Josefin Slab', serif;
+}
+
+.thumb img{
+  max-width: 100px;
+  max-height: 130px;
+
+}
+
 .lots {
   margin: 1%;
 }
