--- a/templates/lot.hbs
+++ b/templates/lot.hbs
@@ -1,18 +1,25 @@
 <h3>Product Page For {{name}}'s Collection</h3>
 
-
-
-{{#each product in products itemController='product'}}
-
-
-    <p>
-      {{product.name}} <button class="btn btn-xs btn-danger" {{action 'delete'}}>Kill</button>
-    </p>
-
-
-{{/each}}
-
 <p>{{#link-to 'new-product' this class="btn btn-default"}}Add Product{{/link-to}}</p>
 
 
-{{outlet}}
+  {{outlet "new-product"}}
+
+
+<div class="col-sm-5">
+
+  {{#each product in products }}
+      <p>
+      <span class="thumb">
+        {{#link-to "product" product}}<img {{bind-attr src=product.image}}>{{/link-to}}
+      </span>
+        {{product.name}}<button class="btn btn-xs btn-default" {{action 'deleteProduct' product}}>remove</button>
+      </p>
+
+  {{/each}}
+
+</div>
+
+<div class="col-sm-7 product">
+  {{outlet "product"}}
+</div>
