--- a/templates/new-product.hbs
+++ b/templates/new-product.hbs
@@ -5,5 +5,9 @@
     <label for="name">Name</label>
     {{input value=name id="text" class="form-control"}}
   </div>
+  <div class="form-group">
+    <label for="image">Image URL</label>
+    {{input value=image id="image" class="form-control"}}
+  </div>
   <button class="btn btn-danger" {{action 'save'}}>Add Product</button>
 </form>
