--- a/css/styles.css
+++ b/css/styles.css
@@ -10,4 +10,12 @@ body {
 
 .lots {
   margin: 1%;
+  font-size: 3em;
+  text-align: center;
+}
+
+.product img {
+  max-width: 100%;
+  max-height: 100%;
+
 }
